SWAPI Temporal Workflows

--- a/project.json
+++ b/project.json
@@ -10,6 +10,9 @@
     },
     "temporal:worker": {
       "command": "nx serve swapi-worker"
+    },
+    "envy": {
+      "command": "npx @envyjs/webui"
     }
   }
 }
