--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.4",
+    "@mui/x-tree-view": "^6.17.0",
     "@nx/next": "17.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
     "@temporalio/activity": "^1.8.6",
@@ -24,10 +26,14 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.0.4",
     "tslib": "^2.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@envyjs/nextjs": "^0.9.1",
+    "@envyjs/node": "^0.9.1",
+    "@envyjs/webui": "^0.9.1",
     "@nx/cypress": "17.2.1",
     "@nx/esbuild": "17.2.1",
     "@nx/eslint": "17.2.1",
